<resources>
    <string name="app_name">Location Diary</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="to_localog">to LocaLog!</string>
    <string name="log_in_to_your_account_to_continue_exploring_and_managing_your_visited_locations">Log in to your account to continue exploring and managing your visited locations.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="your_location_diary">Your Location Diary</string>
    <string name="join_localog">Join LocaLog -</string>
    <string name="create_an_account_to_start_recording_and_managing_your_memorable_locations">Create an account to start recording and managing your memorable locations.</string>
    <string name="passwords">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_btn">Login</string>
    <string name="name">Name</string>
    <string name="hi_william_luther">Hi, William Luther</string>
    <string name="welcome_to_localog">Welcome to LocaLog</string>
    <string name="home_icon">Home Icon</string>
    <string name="map_icon">Map Icon</string>
    <string name="history_icon">History Icon</string>
    <string name="account_icon">Account Icon</string>
    <string name="saved_location">Saved Location</string>
    <string name="eiffel_tower">Eiffel Tower</string>
    <string name="champ_de_mars_5_avenue_anatole_france_75007_paris_france">Champ de Mars, 5 Avenue Anatole France, 75007 Paris, France</string>
    <string name="eiffel_tower_view_page">Eiffel Tower</string>
    <string name="champ_de_mars_5_avenue_anatole_france_75007_paris_france_view_page">Champ de Mars, 5 Avenue Anatole France, 75007 Paris, France</string>
    <string name="header_view_page">Eiffel Tower</string>
    <string name="description_view_page">In the heart of Paris, the iconic iron lattice tower stood tall, a symbol of timeless elegance. Against the backdrop of fading sunlight, it painted a silhouette that whispered of history and modern charm. A brief encounter with the essence of Parisian splendor.</string>
    <string name="category">Category</string>
    <string name="category_category">Category:</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="capture_the_essence_of_your_favorite_places_by_adding_a_new_location_to_your_localog">Capture the essence of your favorite places by adding a new location to your LocaLog.</string>
    <string name="add_photo_icon">Add Photo Icon</string>
    <string name="add_photo">Add Photo</string>
    <string name="category_location_add">Category</string>
    <string name="enter_description">Enter description</string>
    <string name="description">Description:</string>
    <string name="enter_address">Enter address</string>
    <string name="address">Address:</string>
    <string name="enter_location">Enter location</string>
    <string name="location_name">Location Name:</string>
    <string name="add_location">Add Location</string>
    <string name="history_list">History List</string>
    <string name="_10_07_2024">10-07-2024</string>
    <string name="william_luther_zambo">William Luther Zambo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_new_location_name">Enter new location name</string>
    <string name="enter_new_location_address">Enter new location address</string>
    <string name="update">Update</string>
</resources>