<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image6"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_content_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="80dp"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_View_content_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:layout_below="@id/text_view_content_one"
        android:text="@string/to_localog"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:layout_marginTop="-10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_content_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:layout_below="@id/text_View_content_two"
        android:text="@string/log_in_to_your_account_to_continue_exploring_and_managing_your_visited_locations"
        android:textColor="@color/white"
        android:textSize="16.5sp" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_field"
        android:layout_below="@id/text_view_content_three"
        android:drawableStart="@drawable/baseline_mail_24"
        android:drawablePadding="8dp"
        android:paddingStart="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/deep_blue"
        android:textColor="@color/deep_blue"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextContrastCheck,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_field"
        android:layout_below="@id/edit_text_email"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:paddingStart="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/deep_blue"
        android:textColor="@color/deep_blue"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextContrastCheck,TextFields,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="390dp"
        android:layout_below="@id/text_view_forgot_password"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:textSize="18sp"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/btn_login"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/register_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="KeyboardInaccessibleWidget,TouchTargetSizeCheck" />
    </LinearLayout>
</RelativeLayout>