<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image7"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/text_view_content_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/join_localog"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_View_content_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:layout_below="@id/text_view_content_one"
        android:text="@string/your_location_diary"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginTop="-5dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_content_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:layout_below="@id/text_View_content_two"
        android:text="@string/create_an_account_to_start_recording_and_managing_your_memorable_locations"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edit_text_signup_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_field"
        android:layout_below="@id/text_view_content_three"
        android:drawableStart="@drawable/name_24"
        android:drawablePadding="8dp"
        android:paddingStart="20dp"
        android:hint="@string/name"
        android:textColorHint="@color/deep_blue"
        android:textColor="@color/deep_blue"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextContrastCheck,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_text_signup_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_field"
        android:layout_below="@id/edit_text_signup_name"
        android:drawableStart="@drawable/baseline_mail_24"
        android:drawablePadding="8dp"
        android:paddingStart="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/deep_blue"
        android:textColor="@color/deep_blue"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextContrastCheck,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_text_signup_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_field"
        android:layout_below="@id/edit_text_signup_email"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:paddingStart="20dp"
        android:hint="@string/passwords"
        android:textColorHint="@color/deep_blue"
        android:textColor="@color/deep_blue"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextContrastCheck,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_text_signup_confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_field"
        android:layout_below="@id/edit_text_signup_password"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:paddingStart="20dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/deep_blue"
        android:textColor="@color/deep_blue"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextContrastCheck,TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="390dp"
        android:layout_below="@id/edit_text_signup_confirm"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/register_btn"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:textSize="18sp"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_below="@id/btn_register"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="KeyboardInaccessibleWidget,TouchTargetSizeCheck" />
    </LinearLayout>
</RelativeLayout>