<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/hover"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deep_blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/eiffel_tower"
                    android:textColor="@color/deep_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/champ_de_mars_5_avenue_anatole_france_75007_paris_france"
                    android:textColor="#666666"
                    android:textSize="14sp" />

            </LinearLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/deep_blue"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_card_view"
        android:orientation="vertical">

        <EditText
            android:id="@+id/new_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_location_name"/>

        <EditText
            android:id="@+id/new_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_location_address"/>

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/update"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>