<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/sample_cover_image"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="190dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="50dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_profile_rounded"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_image_profile"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="260dp"
        android:gravity="center_horizontal"
        android:text="@string/william_luther_zambo"
        android:textColor="@color/deep_blue"
        android:textSize="18sp" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:cardElevation="20dp">

        <LinearLayout
            android:id="@+id/navigationBar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/layout_rounded_corner"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/homeButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/home_icon"
                android:padding="8dp"
                android:src="@drawable/baseline_home_grey_24" />

            <ImageView
                android:id="@+id/mapButton"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/map_icon"
                android:padding="8dp"
                android:src="@drawable/baseline_map_grey_24" />

            <ImageView
                android:id="@+id/historyButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/history_icon"
                android:padding="8dp"
                android:src="@drawable/baseline_history_grey_24" />

            <ImageView
                android:id="@+id/accountButton"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/account_icon"
                android:padding="8dp"
                android:src="@drawable/baseline_account_white_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>